--- a/app/src/main/res/xml/pref_visualizer.xml
+++ b/app/src/main/res/xml/pref_visualizer.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
-    <!-- TODO (2) Create a res->bools.xml file and create a boolean for this default value -->
-    <!-- TODO (3) Update these values to be values from resource files and not hard coded -->
+    <!-- COMPLETED (2) Create a res->bools.xml file and create a boolean for this default value -->
+    <!-- COMPLETED (3) Update these values to be values from resource files and not hard coded -->
 
     <CheckBoxPreference
-        android:defaultValue="true"
-        android:key="show_bass"
-        android:summaryOff="Hidden"
-        android:summaryOn="Shown"
-        android:title="Show Bass" />
+        android:defaultValue="@bool/pref_value_show_bass"
+        android:key="@string/pref_key_show_bass"
+        android:summaryOff="@string/pref_summary_off_show_bass"
+        android:summaryOn="@string/pref_summary_on_show_bass"
+        android:title="@string/pref_label_show_bass" />
 
 </PreferenceScreen>
