--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -1,11 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-    COMPLETED (1) Create a new xml file called flight_info in the layout directory
-    COMPLETED (2) Create a new xml file called boarding_info in the layout directory
-
-    COMPLETED (9) Copy activity_main.xml into the layout-land folder to have 2 layout xml files for the same activity
-    COMPLETED (10) Re-organize the views in the landscape file to fit all in the one screen
--->
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools">
@@ -44,67 +37,97 @@
                 android:layout_marginStart="16dp"
                 android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                 android:textColor="@color/colorPrimary"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textViewPassengerLabel"
-                tools:layout_constraintTop_creator="1"
+                app:layout_constraintBaseline_toBaselineOf="@+id/textViewPassengerLabel"
+                app:layout_constraintLeft_toRightOf="@+id/textViewPassengerLabel"
                 tools:text="@string/passenger_name"/>
 
-            <!--
-                COMPLETED (3) Move all Views in the flight information section from activity_main to flight_info
-                COMPLETED (5) Add an include tag in activity_main to include flightInfo in the right position
-            -->
             <include
                 android:id="@+id/flight_info"
                 layout="@layout/flight_info"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="32dp"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintRight_toLeftOf="@+id/textViewDepartureTimeLabel"
                 app:layout_constraintTop_toBottomOf="@+id/textViewPassengerName"/>
+
 
             <TextView
                 android:id="@+id/textViewBoardingTimeLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginLeft="32dp"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="12dp"
                 android:letterSpacing="0.3"
                 android:text="@string/boarding_time_label"
                 android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/flight_info"/>
+                app:layout_constraintTop_toBottomOf="@+id/flight_info"
+
+                />
 
 
             <TextView
                 android:id="@+id/textViewBoardingTime"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                 android:textColor="@android:color/black"
                 app:layout_constraintLeft_toLeftOf="@+id/textViewBoardingTimeLabel"
+
                 app:layout_constraintTop_toBottomOf="@+id/textViewBoardingTimeLabel"
                 tools:text="@string/boarding_time"/>
+
+
+            <TextView
+                android:id="@+id/textViewBoardingInCountdownLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="120dp"
+                android:layout_marginStart="120dp"
+                android:letterSpacing="0.3"
+                android:text="@string/boarding_in_label"
+                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                app:layout_constraintLeft_toRightOf="@+id/textViewBoardingTimeLabel"
+                app:layout_constraintTop_toTopOf="@+id/textViewBoardingTimeLabel"
+                />
+
+
+            <TextView
+                android:id="@+id/textViewBoardingInCountdown"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
+                android:textColor="@color/colorBad"
+                app:layout_constraintLeft_toLeftOf="@+id/textViewBoardingInCountdownLabel"
+                app:layout_constraintTop_toBottomOf="@+id/textViewBoardingInCountdownLabel"
+                tools:text="@string/boarding_in_time"
+
+                />
 
 
             <TextView
                 android:id="@+id/textViewDepartureTimeLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
+                android:layout_marginEnd="32dp"
+                android:layout_marginRight="32dp"
+                android:layout_marginTop="64dp"
                 android:letterSpacing="0.3"
                 android:text="@string/departure_time_label"
                 android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-                app:layout_constraintLeft_toLeftOf="@+id/textViewBoardingTime"
-                app:layout_constraintTop_toBottomOf="@+id/textViewBoardingTime"/>
+                app:layout_constraintLeft_toRightOf="@+id/flight_info"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textViewPassengerName"
+                />
 
 
             <TextView
                 android:id="@+id/textViewDepartureTime"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                 android:textColor="@color/colorGood"
                 app:layout_constraintLeft_toLeftOf="@+id/textViewDepartureTimeLabel"
                 app:layout_constraintTop_toBottomOf="@+id/textViewDepartureTimeLabel"
@@ -112,56 +135,28 @@
 
 
             <TextView
-                android:id="@+id/textViewBoardingInTimeLabel"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="40dp"
-                android:layout_marginRight="40dp"
-                android:layout_marginTop="16dp"
-                android:letterSpacing="0.3"
-                android:text="@string/boarding_in_label"
-                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/flight_info"/>
-
-
-            <TextView
-                android:id="@+id/textViewBoardingInCountdown"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-                android:textColor="@color/colorBad"
-                app:layout_constraintLeft_toLeftOf="@+id/textViewBoardingInTimeLabel"
-                app:layout_constraintTop_toBottomOf="@+id/textViewBoardingInTimeLabel"
-                tools:text="@string/boarding_in_time"/>
-
-
-            <TextView
                 android:id="@+id/textViewArrivalTimeLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="32dp"
                 android:letterSpacing="0.3"
                 android:text="@string/arrival_time_label"
                 android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-                app:layout_constraintLeft_toLeftOf="@+id/textViewBoardingInCountdown"
-                app:layout_constraintTop_toBottomOf="@+id/textViewBoardingInCountdown"/>
+                app:layout_constraintLeft_toLeftOf="@+id/textViewDepartureTime"
+                app:layout_constraintTop_toBottomOf="@+id/textViewDepartureTime"/>
 
 
             <TextView
                 android:id="@+id/textViewArrivalTime"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                 android:textColor="@color/colorGood"
                 app:layout_constraintLeft_toLeftOf="@+id/textViewArrivalTimeLabel"
                 app:layout_constraintTop_toBottomOf="@+id/textViewArrivalTimeLabel"
                 tools:text="@string/arrival_time"/>
 
-            <!--
-                COMPLETED (4) Move all Views in the boarding information table from activity_main to boarding_info
-                COMPLETED (6) Add an include tag in activity_main to include boardingInfo in the right position
-            -->
+
             <include
                 android:id="@+id/boarding_info"
                 layout="@layout/boarding_info"
@@ -173,17 +168,20 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textViewArrivalTime"/>
+                app:layout_constraintRight_toLeftOf="@+id/barcode"
+                app:layout_constraintTop_toBottomOf="@+id/textViewBoardingTime"/>
+
 
             <ImageView
                 android:id="@+id/barcode"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:layout_marginTop="16dp"
-                app:layout_constraintLeft_toLeftOf="parent"
+                android:layout_marginEnd="16dp"
+                android:layout_marginRight="16dp"
+                app:layout_constraintBottom_toBottomOf="@+id/boarding_info"
+                app:layout_constraintLeft_toRightOf="@+id/boarding_info"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/boarding_info"
+                app:layout_constraintTop_toTopOf="@+id/boarding_info"
                 app:srcCompat="@mipmap/barcode"/>
 
         </android.support.constraint.ConstraintLayout>
