--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -75,7 +75,6 @@
                 android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                 android:textColor="@android:color/black"
                 app:layout_constraintLeft_toLeftOf="@+id/textViewBoardingTimeLabel"
-
                 app:layout_constraintTop_toBottomOf="@+id/textViewBoardingTimeLabel"
                 tools:text="@string/boarding_time"/>
 
@@ -102,9 +101,7 @@
                 android:textColor="@color/colorBad"
                 app:layout_constraintLeft_toLeftOf="@+id/textViewBoardingInCountdownLabel"
                 app:layout_constraintTop_toBottomOf="@+id/textViewBoardingInCountdownLabel"
-                tools:text="@string/boarding_in_time"
-
-                />
+                tools:text="@string/boarding_in_time"/>
 
 
             <TextView
@@ -119,8 +116,7 @@
                 android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                 app:layout_constraintLeft_toRightOf="@+id/flight_info"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textViewPassengerName"
-                />
+                app:layout_constraintTop_toBottomOf="@+id/textViewPassengerName"/>
 
 
             <TextView
